# Benchmarking

./: .env.example  .gitignore  README.md  docker-compose.observability.yml  pyproject.toml
.cursor/plans/: implementation-plan_2f6b55fa.plan.md
config/: benchmark.yaml  models.yaml
dashboards/: grafana-dashboard.json  prometheus-queries.md  prometheus.yml
dashboards/prometheus/rules/: local-slm-benchmark.yml
docs/: REQUIREMENTS.md  initial-notes.md  open-items.md
prompts/: benchmark_prompts.json
reports/: model-comparison-20260425T202627Z.md  model-comparison-20260425T233303Z.md  model-comparison-20260718T194438Z.md  model-comparison-20260718T194816Z.md  model-comparison-20260718T195357Z.md  model-comparison-20260718T195431Z.md
results/: benchmark-20260712T210827Z.jsonl  benchmark-20260712T210827Z.meta.json  prometheus-metrics.json
results/archive/: benchmark-20260425T215106Z.jsonl
src/local_slm_benchmark/: __init__.py  config.py  prompts.py
src/local_slm_benchmark/api/: app.py  routes.py
src/local_slm_benchmark/benchmark/: __init__.py  metadata.py  results.py  runner.py  system.py
src/local_slm_benchmark/cli/: main.py
src/local_slm_benchmark/evaluation/: __init__.py  deepeval_runner.py  diff.py
src/local_slm_benchmark/models/: ollama_client.py  schemas.py
src/local_slm_benchmark/observability/: __init__.py  logging.py  (+4 more)
tests/: test_analysis.py  test_benchmark_runner.py  test_deepeval_runner.py  test_diff.py  test_ollama_client.py  test_persistent_metrics.py  test_recommendation.py  test_report.py  test_schemas.py  test_validation.py
(+9 files in other folders)
