[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-slm-benchmark"
version = "0.1.0"
description = "Local SLM assistant benchmarking with validation, observability, dashboards, and reporting."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "deepdiff>=8.0.0",
  "deepeval>=2.0.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "matplotlib>=3.9.0",
  "opentelemetry-api>=1.28.0",
  "opentelemetry-sdk>=1.28.0",
  "pandas>=2.2.0",
  "prometheus-client>=0.21.0",
  "psutil>=6.0.0",
  "pydantic>=2.9.0",
  "pytest>=8.0.0",
  "pytest-benchmark>=5.0.0",
  "pyyaml>=6.0.0",
  "rich>=13.9.0",
  "structlog>=24.4.0",
  "typer>=0.12.0",
  "uvicorn>=0.32.0",
]

[project.scripts]
slm-benchmark = "local_slm_benchmark.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/local_slm_benchmark"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

